update for swagger page, refactored to use swagger middleware for validation of parameters,  synchronized agent configuration, authenticate to synergycheck server
