# swagger/agent.yaml
@@ -15,25 +15,28 @@ info:
 host: ___HOST_AND_PORT___
 basePath: /api/v1
 tags:
-  - name: sensor
-    description: sensor facing API to receive updates
-    externalDocs:
-      description: Find out more
-      url: 'http://synergyCheck.com/info'
-  - name: agent
-    description: agent management
+- name: agent
+  description: agent is a server for the sensors
+- name: sensor
+  description: sensor facing API to receive updates
+  externalDocs:
+    description: Find out more
+    url: 'http://synergyCheck.com/info'
+- name: agentRoutes
+  description: agent management
 schemes:
-  - http
+- http
 paths:
   /ping:
     get:
       tags:
-        - agent
+      - agent
       summary: responds with time of day
       description: intended to indicate that agent is up and running
-      operationId: ping
+      x-swagger-router-controller: agentRoutes
+      operationId: getPing
       produces:
-        - application/json
+      - application/json
       responses:
         '200':
           description: successful operation
@@ -42,12 +45,13 @@ paths:
   /state:
     get:
       tags:
-        - agent
+      - agent
       summary: responds with state of server
       description: intended to inform with detail
-      operationId: state
+      x-swagger-router-controller: agentRoutes
+      operationId: getState
       produces:
-        - application/json
+      - application/json
       responses:
         '200':
           description: successful operation
@@ -56,21 +60,22 @@ paths:
   /sensor/report:
     post:
       tags:
-        - sensor
+      - sensor
       summary: new data from sensor
       description: calls with update of data captured by a sensor
-      operationId: sensorReport
+      x-swagger-router-controller: agentRoutes
+      operationId: postSensorReport
       consumes:
-        - application/json
+      - application/json
       produces:
-        - application/json
+      - application/json
       parameters:
-        - in: body
-          name: body
-          description: sensor data
-          required: true
-          schema:
-            $ref: '#/definitions/SensorReport'
+      - in: body
+        name: body
+        description: sensor data
+        required: true
+        schema:
+          $ref: '#/definitions/SensorReport'
       responses:
         '405':
           description: Invalid input
@@ -79,54 +84,57 @@ paths:
   /sensor/start:
     post:
       tags:
-        - sensor
+      - sensor
       summary: sensor has started up
       description: called when a sensor starts up
-      operationId: sensorStart
+      x-swagger-router-controller: agentRoutes
+      operationId: postSensorStart
       consumes:
-        - application/json
+      - application/json
       produces:
-        - application/json
+      - application/json
       parameters:
-        - in: body
-          name: body
-          description: sensor start data
-          required: true
-          schema:
-            $ref: '#/definitions/SensorStart'
+      - in: body
+        name: body
+        description: sensor start data
+        required: true
+        schema:
+          $ref: '#/definitions/SensorStart'
       responses:
         '405':
           description: Invalid input
   /sensor/stop:
     post:
       tags:
-        - sensor
+      - sensor
       summary: sensor has stopped
       description: called when a sensor stops
-      operationId: sensorStop
+      x-swagger-router-controller: agentRoutes
+      operationId: postSensorStop
       consumes:
-        - application/json
+      - application/json
       produces:
-        - application/json
+      - application/json
       parameters:
-        - in: body
-          name: body
-          description: sensor stop data
-          required: true
-          schema:
-            $ref: '#/definitions/SensorStop'
+      - in: body
+        name: body
+        description: sensor stop data
+        required: true
+        schema:
+          $ref: '#/definitions/SensorStop'
       responses:
         '405':
           description: Invalid input
   /sensor/priorReport:
     get:
       tags:
-        - sensor
+      - sensor
       summary: get prior sent report
       description: server keeps prior report posted
-      operationId: sensorPriorReport
+      x-swagger-router-controller: agentRoutes
+      operationId: getSensorPriorReport
       produces:
-        - application/json
+      - application/json
       responses:
         '200':
           description: successful operation
@@ -135,10 +143,11 @@ paths:
   /sensor/nextReport:
     get:
       tags:
-        - sensor
+      - sensor
       summary: get next report
       description: server accumulates report to be posted
-      operationId: sensorNextReport
+      x-swagger-router-controller: agentRoutes
+      operationId: getSensorNextReport
       produces:
       - application/json
       responses:
@@ -176,13 +185,43 @@ paths:
           description: successful operation
           schema:
             $ref: '#/definitions/SensorAutoConfig'
+  /agent/startReports:
+    get:
+      tags:
+      - agent
+      summary: start sending agentReports from agent to synergyCheck
+      description: something here
+      x-swagger-router-controller: agentRoutes
+      operationId: postStartReports
+      produces:
+      - application/json
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/ApiResponse'
+  /agent/stopReports:
+    get:
+      tags:
+      - agent
+      summary: stop sending agentReports from agent to synergyCheck
+      description: something here
+      x-swagger-router-controller: agentRoutes
+      operationId: postStopReports
+      produces:
+      - application/json
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/ApiResponse'
 securityDefinitions:
   api_key:
     type: apiKey
     name: api_key
     in: header
 definitions:
-  SensorReport:
+  SensorReport: # what the sensor sends to the agent each reporting period
     type: object
     properties:
       snapshot:
@@ -194,6 +233,7 @@ definitions:
             type: string
           timestamp:
             type: string
+            format: datetime
           transactionId:
             type: string
           duration:
@@ -205,7 +245,7 @@ definitions:
   SensorConnection:
     type: object
     properties:
-      connectionId:
+      interfaceId:
         type: integer
         format: int64
       charCount:
@@ -214,13 +254,21 @@ definitions:
       packetCount:
         type: integer
         format: int64
-      disconnected:
+      lastMessageTimestamp: # not sure how useful this is - not being forwarded by Agent in agentReport
+        type: string
+        format: datetime
+      disconnected: # nmap says no connection exists between source and target
+        type: boolean
+      sourceNoPing: # source does not respond to ping
+        type: boolean
+      targetNoPing: # target does not respond to ping
         type: boolean
   Ping:
     type: object
     properties:
       timestamp:
         type: string
+        format: datetime
   SensorStart:
     type: object
     properties:
@@ -228,6 +276,7 @@ definitions:
         type: string
       timestamp:
         type: string
+        format: datetime
       status:
         type: string
   SensorStop:
@@ -237,6 +286,7 @@ definitions:
         type: string
       timestamp:
         type: string
+        format: datetime
       status:
         type: string
   ApiResponse:
@@ -323,9 +373,22 @@ definitions:
   SensorConfig:
     type: object
     properties:
-      name:
+      version: # of configuration (increases once per saved update of sensor config)
+        type: integer
+        format: int64
+      customerId:
         type: string
-      sensorId: # identify the sensor to configure
+      agentId:
+        type: string
+      name: # of sensor
+        type: string
+      sensorId:
+        type: string
+      device: # identifier of ethernet device to monitor
+        type: string
+      deviceName: # external name of ethernet device being monitored
+        type: string
+      sampleRate: # how often to sample traffic - can be miilis or string '10s'
         type: string
       connections:
         type: array
@@ -348,22 +411,23 @@ definitions:
   SensorAutoConfig:
     type: object
     properties:
-      name:
-        type: string
-      version:
+      version: # of configuration (increases once per saved update of sensor config)
         type: integer
         format: int64
-      agentId:
-        type: string
       customerId:
         type: string
-      device:
+      agentId:
         type: string
-      deviceName:
+      sensorId:
         type: string
-      sampleRate:
-        type: integer
-        format: int64
+      name: # of sensor
+        type: string
+      device: # identifier of ethernet device to monitor
+        type: string
+      deviceName: # external name of ethernet device being monitored
+        type: string
+      sampleRate: # how often to sample traffic - can be miilis or string '10s'
+        type: string
       connections:
         type: array
         items:
@@ -383,6 +447,57 @@ definitions:
       connectionId:
         type: integer
         format: int64
+  AgentReport:
+    description: Generated by this server, acting as a client of SynergyCheck. For documentation purposes only!
+    type: object
+    properties:
+      cid:
+        type: string
+        format: oid
+      tx:
+        type: string
+        format: oid
+      aid:
+        type: string
+        format: oid
+      ts:
+        type: string
+        format: timestamp
+      dur:
+        type: string
+        format: timeduration
+      int:
+        type: array
+        items:
+          $ref: '#/definitions/AgentReportInterface'
+      proc:
+        type: string
+      err:
+        type: string
+  AgentReportInterface:
+    type: object
+    properties:
+      cnid:
+        type: string
+        format: oid
+      iid:
+        type: string
+      cc:
+        type: number
+      pc:
+        type: number
+      dis:
+        type: boolean
+      snp:
+        type: boolean
+      tnp:
+        type: boolean
+      ldts:
+        type: string
+        format: timestamp
+      lcts:
+        type: string
+        format: timestamp
 externalDocs:
   description: Find out more about Swagger
   url: 'http://swagger.io'
